--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <img src="csc106_banner.jpeg">
-    <h1>Welcome to Alfred's HTML Programming Portfolio</h1>
+    <h1>Welcome to My HTML Programming Portfolio</h1>
   </body>
   
 </html>
