--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <img src="csc106_banner.jpeg">
     <h1>About Me</h1>
      <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island </p>
-    Back to <a href="index.html">home page
+     <a href="index.html">
     <img src="home button.png"></a>
   </body>
 </html>
