--- a/aboutme.html
+++ b/aboutme.html
@@ -12,5 +12,7 @@
      <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island </p>
      <a href="index.html">
     <img src="home button.png"></a>
+    <a href="javascripts.html">
+      <img src="javascripts button.png"></a>
   </body>
 </html>
