--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <img src="csc106_banner.jpeg">
     <h1>Welcome to My HTML Programming Portfolio</h1>
+    <p>Hello everyone, welcome to my programing portfolio. In this portfolio you will be able to find HTLM codes I have used to design pages.</p>
+    
   </body>
   
 </html>
