--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <img src="csc106_banner.jpeg">
     <h1>Welcome to My HTML Programming Portfolio</h1>
     <p>Hello everyone, welcome to my programing portfolio. In this portfolio you will be able to find HTLM codes I have used to design pages.</p>
-    
+    <a href="javascripts.html">
+    <img src="javascripts button.png"></a>
+    <a href="aboutme.html">
+      <img src="aboutme button.png"></a>
   </body>
   
 </html>
