--- a/javascripts.html
+++ b/javascripts.html
@@ -7,8 +7,12 @@
   </head>
   
   <body>
+    <p>This page of my portfolio is where my Javascript code will be posted.</p>
     <img src="csc106_banner.jpeg">
     <h1>My Javascript</h1>
-    Back to <a href="index.html">home page</a>
+    <a href="index.html">
+    <img src="home button.png"></a>
+    <a href="aboutme.html">
+      <img src="about me button.png"></a>
   </body>
 </html>
