--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    <img src="myBanner.jpeg">
+    <img src="myBanner.jpg">
     <h1>Welcome to My HTML Programming Portfolio</h1>
     <p>Hello everyone, welcome to my programing portfolio. In this portfolio you will be able to find HTLM codes I have used to design pages.</p>
     <a href="javascripts.html">
