--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   
   <body>
     <img src="myBanner.jpg">
+    <table id="nav-table">
+      <tr>
+        <td><a href="javascripts.html"><img src="javascripts.png"></a></td>
+        <td><a href="aboutme.html"><img src="aboutme.png"></a></td>
     <h1>Welcome to My HTML Programming Portfolio</h1>
     <p>Hello everyone, welcome to my programing portfolio. In this portfolio you will be able to find HTLM codes I have used to design pages.</p>
-    <a href="javascripts.html">
-    <img src="javascripts button.png"></a>
-    <a href="aboutme.html">
-      <img src="about me button.png"></a>
   </body>
   
 </html>
