--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <img src="myBanner.jpg">
     <table id="nav-table">
       <tr>
-        <td><a href="javascripts.html"><img src="javascripts.png"></a></td>
-        <td><a href="aboutme.html"><img src="aboutme.png"></a></td>
+        <td><a href="home.html"><img src="Home.png"</a></td>
+        <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td><a href="apps.html"><img src="Apps.png"></a></td>
+        <td><a href="aboutme.html"><img src="About Me.png"></a></td>  
+      </tr>
+    </table>
     <h1>Welcome to My HTML Programming Portfolio</h1>
     <p>Hello everyone, welcome to my programing portfolio. In this portfolio you will be able to find HTLM codes I have used to design pages.</p>
   </body>
