--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="myBanner.jpg">
     <table id="nav-table">
       <tr>
-        <td><a href="home.html"><img src="Home.png"</a></td>
+        <td><a href="index.html"><img src="Home.png"</a></td>
         <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
         <td><a href="apps.html"><img src="Apps.png"></a></td>
         <td><a href="aboutme.html"><img src="About Me.png"></a></td>  
