--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <img src="myBanner.jpg">
     <table id="nav-table">
       <tr>
-        <td><a href="index.html"><img src="Home.png"</a></td>
-        <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
-        <td><a href="apps.html"><img src="Apps.png"></a></td>
-        <td><a href="aboutme.html"><img src="About Me.png"></a></td>  
+        <td id="nav-td"><a href="index.html"><img src="Home.png"</a></td>
+        <td id="nav-td"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
+        <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
       </tr>
     </table>
     <h1>Welcome to My HTML Programming Portfolio</h1>
