--- a/aboutme.html
+++ b/aboutme.html
@@ -7,12 +7,14 @@
   </head>
   
   <body>
-    <img src="csc106_banner.jpeg">
+    <img src="myBanner.jpg">
+    <table id="nav-table">
+      <tr>
+        <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
+        <td id="nav-td"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
+        <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
     <h1>About Me</h1>
-     <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island </p>
-     <a href="index.html">
-    <img src="home button.png"></a>
-    <a href="javascripts.html">
-      <img src="javascripts button.png"></a>
+    <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island </p>
   </body>
 </html>
