--- a/javascripts.html
+++ b/javascripts.html
@@ -7,12 +7,15 @@
   </head>
   
   <body>
-    <img src="csc106_banner.jpeg">
+    <img src="myBanner.jpg">
+    <table id="nav-table">
+      <tr>
+        <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
+        <td id="nav-td"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
+        <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>    
+     
     <h1>My Javascript</h1>
     <p>This page of my portfolio is where my Javascript code will be posted.</p>
-    <a href="index.html">
-    <img src="home button.png"></a>
-    <a href="aboutme.html">
-      <img src="about me button.png"></a>
   </body>
 </html>
