--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
   <head>
      <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   
   <body>
@@ -14,6 +15,7 @@
         <td id="nav-td"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
         <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
         <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
+    </table>   
     <h1>About Me</h1>
     <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island </p>
   </body>
