--- a/javascripts.html
+++ b/javascripts.html
@@ -14,8 +14,8 @@
         <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
         <td id="nav-td"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
         <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
-        <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>    
-     
+        <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
+    </table>    
     <h1>My Javascript</h1>
     <p>This page of my portfolio is where my Javascript code will be posted.</p>
   </body>
