--- a/apps.html
+++ b/apps.html
@@ -15,7 +15,7 @@
         <td id="nav-td"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
         <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
         <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>    
-     
+    </table>
     <h1>My Apps</h1>
     <p>This page of my portfolio is where my apps will be posted and any code involved.</p>
   </body>
