--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
         <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
         <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
     </table>   
-    <h1>About Me</h1>
+    <h1>Welcome to the page about me!</h1>
     <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island </p>
   </body>
 </html>
