--- a/javascripts.html
+++ b/javascripts.html
@@ -16,7 +16,7 @@
         <td id="nav-td"><a href="apps.html"><img src="Apps.png"></a></td>
         <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
     </table>    
-    <h1>My Javascript</h1>
+    <h1>Welcome to my Javascript page!</h1>
     <p>This page of my portfolio is where my Javascript code will be posted.</p>
   </body>
 </html>
