--- a/javascripts.html
+++ b/javascripts.html
@@ -17,6 +17,6 @@
         <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
     </table>    
     <h1>Welcome to my Javascript page!</h1>
-    <p>This page of my portfolio is where my Javascript code will be posted.</p>
+    <p>This page of my portfolio is where my Javascript code will be posted, throughout the fall 2022 semester I will be producing code, some being Javascript and will be able to found on this page</p>
   </body>
 </html>
