--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,8 @@
         <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>  
     </table>   
     <h1>Welcome to the page about me!</h1>
-    <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island </p>
+    <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island.<br>
+      I enjoy watching pretty much any type of sports but my top 2 sports would have to football follwed by Formula 1.
+    </p>
   </body>
 </html>
