--- a/apps.html
+++ b/apps.html
@@ -17,6 +17,8 @@
         <td id="nav-td"><a href="aboutme.html"><img src="About Me.png"></a></td>    
     </table>
     <h1>Welcome to my Apps page!</h1>
-    <p>This page of my portfolio is where my apps will be posted and any code involved.</p>
+    <p>This page of my portfolio is where my apps will be posted and any code involved. Throughout the Fall 2022 semester I will be making projects and producing custom code for said projects,<br>
+in hopes to make fully functional apps and websites.
+    </p>
   </body>
 </html>
