--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       </tr>
     </table>
     <h1>Welcome to My HTML Programming Portfolio</h1>
-    <p>Hello everyone, welcome to my programing portfolio. In this portfolio you will be able to find HTLM codes I have used to design pages.</p>
+    <p>Hello everyone, welcome to my programing portfolio. In this portfolio you will be able to find HTLM codes I have used to design websites and apps during this semester. Through this website you will be able to see<br>
+various codes that I have made and hopefully see progression towards my coding skills.
+    </p>
   </body>
   
 </html>
