--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,8 @@
     </table>   
     <h1>Welcome to the page about me!</h1>
     <p>Hello everybody my name is Alfred but most people call me Fredo, I'm a junior majoring in computer science, and I'm from Providence, Rhode Island.<br>
-      I enjoy watching pretty much any type of sports but my top 2 sports would have to football follwed by Formula 1.
+      I enjoy watching pretty much any type of sports but my top 2 sports would have to football follwed by Formula 1. I have long curly black hair,<br>
+      brown eyes, and my favorite color is blue. Some of my hobbies include playing chess, cooking, and hiking.
     </p>
   </body>
 </html>
