--- a/aboutme.html
+++ b/aboutme.html
@@ -21,5 +21,6 @@
       I enjoy watching pretty much any type of sports but my top 2 sports would have to football follwed by Formula 1. I have long curly black hair,<br>
       brown eyes, and my favorite color is blue. Some of my hobbies include playing chess, cooking, and hiking.
     </p>
+    <img src="Nunez.jpg">
   </body>
 </html>
