--- a/javascripts.html
+++ b/javascripts.html
@@ -21,3 +21,4 @@
     </p>
   </body>
 </html>
+<h2><a href="https://www.khanacademy.org/computer-programming/nunez_bitmoji/5530413415579648">Nunez_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_bitmoji/5530413415579648/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
