--- a/javascripts.html
+++ b/javascripts.html
@@ -22,3 +22,5 @@
   </body>
 </html>
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_bitmoji/5530413415579648">Nunez_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_bitmoji/5530413415579648/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+<h2><a href="https://www.khanacademy.org/computer-programming/nunez_dancing_bitmoji/4546779938340864">Nunez_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_dancing_bitmoji/4546779938340864/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+<h2><a href="https://www.khanacademy.org/computer-programming/nunez_racing_bitmoji/6526746372915200">Nunez_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_racing_bitmoji/6526746372915200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
