--- a/javascripts.html
+++ b/javascripts.html
@@ -29,3 +29,4 @@
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_resizebitmoji/5745222354518016">Nunez_resizeBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_resizebitmoji/5745222354518016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_decision/4646829746077696">Nunez_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_decision/4646829746077696/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_follow/4535859434536960">Nunez_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_follow/4535859434536960/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+<h2><a href="https://www.khanacademy.org/computer-programming/nunez_zoo/6513927275462656">Nunez_zoo</a></h2><script src="Nunez_zoo.png"></script>
