--- a/javascripts.html
+++ b/javascripts.html
@@ -30,4 +30,4 @@
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_decision/4646829746077696">Nunez_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_decision/4646829746077696/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_follow/4535859434536960">Nunez_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/nunez_follow/4535859434536960/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_zoo/6513927275462656"><img src="Nunez_zoo.png"></script></a>
-<h2><a href="https://www.khanacademy.org/computer-programming/nunez_tag/5601079749820416"><img src="Nunez_tag.png"></script></a>
+<h2><a href="https://www.khanacademy.org/computer-programming/nunez_tag/5601079749820416"><img src="Nunez_tag.png"></a>
