--- a/javascripts.html
+++ b/javascripts.html
@@ -32,3 +32,4 @@
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_zoo/6513927275462656"><img src="Nunez_zoo.png"></a>
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_tag/5601079749820416"><img src="Nunez_tag.png"></a>
 <h2><a href="https://www.khanacademy.org/computer-programming/nunez_contacts/4629104223109120"><img src="Nunez_contacts.png"></a>
+<h2><a href="https://www.khanacademy.org/computer-programming/nunez_education/6678987071340544"><img src = "Nunez_initials.png"></a>
